fixed an alignment issue in the register button

--- a/index.css
+++ b/index.css
@@ -70,6 +70,9 @@ section {
   color: rgb(255, 255, 255);
 
   transition: all 0.2s linear;
+
+  display: grid;
+  place-items: center;
 }
 
 #register:hover {
